--- a/css/default.css
+++ b/css/default.css
@@ -7,30 +7,25 @@ font-family: 'Orbitron', sans-serif;
 
 @media screen and (max-width:640px){
   body{
-    background-color: red;
+    background-color: gray;
   }
 }
 
-@media screen and (min-width:641px) and (max-width:980px){
-  body{
-    background-color: green;
-  }
+header{
+  padding:10px;
+  text-aligen:center;
+  background-color: red;
 }
-
-@media screen and (min-width:981px){
-  body{
-    background-color:blue;
-  }
+section{
+  padding: 10px;
+  background-color: orange;
 }
-
-@media screen and (orientation:portrait){
-  body:after{
-    content: "縦長";
-  }
+aside{
+  padding: 10px;
+  background-color: green;
 }
-
-@media screen and(orientation:landscape){
-  body:after {
-    content: "横長";
-  }
+footer{
+  padding: 10px;
+  background-color: blue;
+  text-alige: center;
 }
