--- a/css/default.css
+++ b/css/default.css
@@ -29,3 +29,15 @@ footer{
   background-color: blue;
   text-alige: center;
 }
+
+@media screen and (min-width:641px){
+  aside{
+    width: calc(50% - 20px);
+    float:left;
+  }
+  #side:after{
+    content:"";
+    display:block;
+    clear:both;
+  }
+}
